--- a/autor.html
+++ b/autor.html
@@ -1,18 +1,18 @@
-	<!DOCTYPE html">
+<!DOCTYPE html">
 <html lang="es">
 <head>
 	<meta charset="UTF-8"/>
 	<meta description="Sitio web HTML5"/>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-
-<header>		
-		<img src="img/LogoUNAD.png" width="315" height="66,5">
-	<h1>Fase de Construcción e Implantación HTML5</h1>
-	<h1>Actividades</h1><br/>
 	
-	</header>
-<nav>
+<header>    
+      <img src="img/LogoUNAD.png" width="315" height="66,5">
+   <h1>Fase de Construcción e Implantación HTML5</h1>
+   <h1>El Autor</h1>
+    </header>
+   
+   <nav>
 		<ul>
 		<li><a href="lecturas.html" class="daddy">Lectura</a>
 		<li><a href="multimedia.html" class="no-ch">Multimedia</a></li>
@@ -21,19 +21,24 @@
 		<li><a href="index.html" class="no-ch">Regresar</a></li>
 	 </nav>
 
-<section>
-<a href="Actividades_cruci.html">Crucigrama - Palabras Clave Seguridad Informática<a><br/>
-<br/>
-<a href="Actividades_sopa.html">Sopa de Letras - Palabras Clave<a><br/>
-<br/>
-<a href="Actividades_completa.html">Ordena las palabras - Concepto Seguridad Informatica<a><br/>
+<div class="margenes espaciado">
+		<img src="img/JMPA.jpg" width="130" height="155">
+		</br>
+		<B>Nombre:</B> Juan Manuel Pardo Ayala</br>
+		<B>Código:</B> 80243097</br>
+		<B>Programa:</B> Ingeniería de Sistemas</br>
+		<B>Correo electrónico:</B> juanmanuelpardo@gmail.com </br>
+		<B>Skype:</B> juanmanuelpardoayala </br>
+		
 </section>
+		
+		</div>
 
 <footer>
 	<img src="img/Logo_unad pie.jpg"<br/>
 
 
-	Sede Nacional: Calle 14 Sur No. 14 - 23PBX:(+57) 1 344 3700 Bogotá D.C. Colombia.<br/></left>	
+	Sede Nacional: Calle 14 Sur No. 14 - 23PBX:(+57) 1 344 3700 Bogotá D.C. Colombia.<br/></left>
 	Línea Nacional gratuita desde Colombia 018000115223<br/></left>
 	Correo electrónico: atencionalusuario@unad.edu.co<br/></left>
 	<center><a href="https://www.cerotec.net/estadisticas-99524/ingjuanma82.github.io" title="contador visitas"><img src="https://www.cerotec.net/contador.php?t=24&s=2&i=99524" alt="Contador de visitas y estadísticas"></a> <br><a href='https://www.cerotec.net' style='font-size:12px;' <br/></center>
