--- a/index.html
+++ b/index.html
@@ -7,43 +7,46 @@
 	<meta content="Fase de Construcción" name="description">
 	<meta content="UNAD,diseño web,html5,css,class" name="keywords">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
  	<title>Desarrollo de la Actividad</title>
 </head>
 <body>
-	<h1>Fase de Construcción e Implantación HTML5</h1>
+	
+	
 	<header>		
-		<img src="img/Logo_unad.jpg" alt="Aquí va una imagen" title="Imagen de la Unad">
-		
+		<img src="img/LogoUNAD.png" width="315" height="66,5"><br/><br/>
+	<h1>Fase de Construcción e Implantación HTML5 - Seguridad Informática</h1><br/>
 	</header>
 	
 	<nav>
-		SEGURIDAD INFORMATICA
-	<ul>
-		<li><a href="MATERIAL_DE_LECTURA.html" class="daddy">Material de Lectura</a>
-		<ul class="other-section">
-		<li><a href="MATERIAL_MULTIMEDIA.html" class="no-ch">Material Multimedia</a></li>
+		<ul>
+		<li><a href="lecturas.html" class="daddy">Lectura</a>
+		<li><a href="multimedia.html" class="no-ch">Multimedia</a></li>
 		<li><a href="Actividades.html" class="no-ch">Actividades</a></li>
-		<li><a href="AUTORES.html" class="no-ch">Autores</a></li>
-	  	</nav>
-	<section id="contenedor">
-		<section id="principal">
-			<B>OBJETIVO GENERAL</B>
-			<article>
-				Elaborar un OVI sobre los Fundamentos de Seguridad Informática con el fin de conocer los conceptos básicos de seguridad informática, sus estándares y normas en la seguridad de redes para entender el impacto que puede causar en la infraestructura computacional la ausencia de un buen mecanismo de seguridad.
-			</article>
-<p><br /> <iframe width="620" height="400" style="display: block; margin-left: auto; margin-right: auto;" src="https://www.youtube.com/embed/CKy5tDMF7w4" frameborder="0" allowfullscreen=""></iframe></p>
+		<li><a href="autor.html" class="no-ch">Autor</a></li>
+		<li><a href="index.html" class="no-ch">Regresar</a></li>
+	 </nav>
+	
+	<section>
+			<h2> OBJETIVO GENERAL</h2>			
+			<p>Elaborar un OVI sobre los Fundamentos de Seguridad Informática con el fin de conocer los conceptos básicos de seguridad informática, sus estándares y normas en la seguridad de redes para entender el impacto que puede causar en la infraestructura computacional la ausencia de un buen mecanismo de seguridad.</p>
+			
 		</section>	
+		
 		<aside>
 <a class="twitter-timeline" href="https://twitter.com/search?q=%40UniversidadUNAD%20" data-widget-id="852713573021253633">Tweets sobre @UniversidadUNAD </a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 		</aside>
-	</section>
+	
 
 	<footer>
-	<img src="img/Logo_unad pie.jpg" alt="Aquí va una imagen" title="Logo_unad pie">Sede Nacional: Calle 14 Sur No. 14 - 23PBX:(+57) 1 344 3700 Bogotá D.C. Colombia.
-Línea Nacional gratuita desde Colombia 018000115223Correo electrónico: atencionalusuario@unad.edu.co
-	<center><a href="https://www.cerotec.net/estadisticas-99384/github.com" title="estadisticas del contador de visitas"><img src="https://www.cerotec.net/contador.php?t=13&s=2&i=99384" alt="Contador de visitas y estadísticas"></a> <br><a href='' style='font-size:20px;' >Contador visitas</a></center>
+	<img src="img/Logo_unad pie.jpg"<br/>
+
+
+	Sede Nacional: Calle 14 Sur No. 14 - 23PBX:(+57) 1 344 3700 Bogotá D.C. Colombia.<br/></left>
+	Línea Nacional gratuita desde Colombia 018000115223<br/></left>
+	Correo electrónico: atencionalusuario@unad.edu.co<br/></left>
+	<center><a href="https://www.cerotec.net/estadisticas-99524/ingjuanma82.github.io" title="contador visitas"><img src="https://www.cerotec.net/contador.php?t=24&s=2&i=99524" alt="Contador de visitas y estadísticas"></a> <br><a href='https://www.cerotec.net' style='font-size:12px;' <br/></center>
 	</footer>
 
 </body>
