--- a/Actividades_completa.html
+++ b/Actividades_completa.html
@@ -1,4 +1,4 @@
-	<!DOCTYPE html">
+<!DOCTYPE html">
 <html lang="es">
 <head>
 	<meta charset="UTF-8"/>
@@ -8,11 +8,11 @@
 
 <header>		
 		<img src="img/LogoUNAD.png" width="315" height="66,5">
-	<h1>Fase de Construcción e Implantación HTML5</h1>
-	<h1>Actividades</h1><br/>
+	<h1>Ordena las Palabras</h1>
+	<h1>Concepto de Seguridad Informática</h1><br/>
 	
 	</header>
-<nav>
+ <nav>
 		<ul>
 		<li><a href="lecturas.html" class="daddy">Lectura</a>
 		<li><a href="multimedia.html" class="no-ch">Multimedia</a></li>
@@ -22,18 +22,13 @@
 	 </nav>
 
 <section>
-<a href="Actividades_cruci.html">Crucigrama - Palabras Clave Seguridad Informática<a><br/>
-<br/>
-<a href="Actividades_sopa.html">Sopa de Letras - Palabras Clave<a><br/>
-<br/>
-<a href="Actividades_completa.html">Ordena las palabras - Concepto Seguridad Informatica<a><br/>
+<iframe src='https://www.educaplay.com/es/recursoseducativos/2937610/html5/sobre_seguridad_informatica.htm' width='700' height='483' frameborder='0'></iframe><a href='https://www.educaplay.com/es/recursoseducativos/2937610/sobre_seguridad_informatica.htm'></a>
 </section>
-
 <footer>
 	<img src="img/Logo_unad pie.jpg"<br/>
 
 
-	Sede Nacional: Calle 14 Sur No. 14 - 23PBX:(+57) 1 344 3700 Bogotá D.C. Colombia.<br/></left>	
+	Sede Nacional: Calle 14 Sur No. 14 - 23PBX:(+57) 1 344 3700 Bogotá D.C. Colombia.<br/></left>
 	Línea Nacional gratuita desde Colombia 018000115223<br/></left>
 	Correo electrónico: atencionalusuario@unad.edu.co<br/></left>
 	<center><a href="https://www.cerotec.net/estadisticas-99524/ingjuanma82.github.io" title="contador visitas"><img src="https://www.cerotec.net/contador.php?t=24&s=2&i=99524" alt="Contador de visitas y estadísticas"></a> <br><a href='https://www.cerotec.net' style='font-size:12px;' <br/></center>
