--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
 	
 	<header>		
-		<img src="img/LogoUNAD.png" width="315" height="66,5"><br/><br/>
+		<img src="https://www.unad.edu.co/templates/unadgeneral/images/logoUNAD.png" width="315" height="66,5"><br/><br/>
 	<h1>Fase de Construcción e Implantación HTML5 - Seguridad Informática</h1><br/>
 	</header>
 	
