--- a/Actividades_completa.html
+++ b/Actividades_completa.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 <header>		
-		<img src="img/LogoUNAD.png" width="315" height="66,5">
+		<img src="https://www.unad.edu.co/templates/unadgeneral/images/logoUNAD.png" width="315" height="66,5">
 	<h1>Ordena las Palabras</h1>
 	<h1>Concepto de Seguridad Informática</h1><br/>
 	
