--- a/lecturas.html
+++ b/lecturas.html
@@ -8,7 +8,7 @@
 
 
 <header>    
-      <img src="img/LogoUNAD.png" width="315" height="66,5">
+      <img src="https://www.unad.edu.co/templates/unadgeneral/images/logoUNAD.png" width="315" height="66,5">
     <h1>Fase de Construcción e Implantación HTML5</h1>
    <h1>Lecturas</h1><br/>
    
