--- a/lecturas_3.html
+++ b/lecturas_3.html
@@ -29,7 +29,7 @@
 <div id="main-wrapper">
 <div id="main"><a name="main"></a>
 <div id="nodeDecoration"><h1 id="nodeTitle"></h1></div>
-<div align="center"><iframe width="800" height="600" src="http://www.dte.us.es/personal/mcromero/docs/ip/tema-seguridad-IP.pdf" frameborder="0" widhth="1200"></iframe></div>
+<div align="center"><iframe width="800" height="600" src="pdf/doc3.pdf" frameborder="0" widhth="1200"></iframe></div>
 </div>
 
    <footer>
