--- a/Actividades_sopa.html
+++ b/Actividades_sopa.html
@@ -25,11 +25,15 @@
 <iframe src='https://www.educaplay.com/es/recursoseducativos/2937591/html5/seguridad_informatica.htm' width='700' height='483' frameborder='0'></iframe><a href='https://www.educaplay.com/es/recursoseducativos/2937591/seguridad_informatica.htm'></a>
 </section>
 <footer>
-	<img src="img/Logo_unad pie.jpg"<br/>
+	<img src="img/Logo_unad pie.jpg">
 
-
+	<br/>
 	Sede Nacional: Calle 14 Sur No. 14 - 23PBX:(+57) 1 344 3700 Bogotá D.C. Colombia.<br/></left>
 	Línea Nacional gratuita desde Colombia 018000115223<br/></left>
 	Correo electrónico: atencionalusuario@unad.edu.co<br/></left>
 	<center><a href="https://www.cerotec.net/estadisticas-99524/ingjuanma82.github.io" title="contador visitas"><img src="https://www.cerotec.net/contador.php?t=24&s=2&i=99524" alt="Contador de visitas y estadísticas"></a> <br><a href='https://www.cerotec.net' style='font-size:12px;' <br/></center>
+	
 	</footer>
+
+</body>
+</html>
