--- a/lecturas.html
+++ b/lecturas.html
@@ -24,24 +24,35 @@
     </nav>
 
 <section>
-<a href="lecturas_1.html">Lectura No.1 - Seguridad Informática<a><br/>
+<a href="lecturas_1.html">Lectura No.1 - Seguridad Informática. <a><br/>
+<h4>Recuperado el 16 de Abril de 2017. Ministerio de Educación. ITE |Internet Aula Abierta 2.0.. de:http://www.ite.educacion.es/formacion/materiales/157/cd/pdf/modulo_8_seguridad_informatica.pdf. </h4>
 <br/>
 <a href="lecturas_2.html">Lectura No.2 - Modelos De Seguridad Permisivos Como Mecanismos De Prevención De Vulnerabilidades<a><br/>
+<h4>Recuperado el 16 de Abril de 2017. 2013, 2014  Eugenia Bahit – www.eugeniabahit.com – Bajo Licencia Creative Commons BY-NC-SA. de:http://46.101.4.154/Art%C3%ADculos%20t%C3%A9cnicos/Seguridad%20Inform%C3%A1tica/Modelos%20de%20Seguridad%20Permisivos%20en%20la%20prevenci%C3%B3n%20de%20vulnerabilidades.pdf. </h4>
+
 <br/>
 <a href="lecturas_3.html">Lectura No.3 - Seguridad en Redes y Procolos Asociados<a><br/>
+<h4>Recuperado el 16 de Abril de 2017. MariCarmen Romero Ternero - Ingeniería de Protocolos Curso 2003/2004. de:http://www.dte.us.es/personal/mcromero/docs/ip/tema-seguridad-IP.pdf. </h4>
 <br/>
-<a href="lecturas_4.html">Lectura No.4<a><br/>
+
 <br/>
-<a href="lecturas_5.html">Lectura No.5<a><br/>
+
+<br/>
+
+<br/>
 </section>
 
 
-   <footer>
-   <img src="img/Logo_unad pie.jpg"<br/>
+  <footer>
+   <img src="img/Logo_unad pie.jpg">
 
-
-   Sede Nacional: Calle 14 Sur No. 14 - 23PBX:(+57) 1 344 3700 Bogotá D.C. Colombia.<br/></left>   
+   <br/>
+   Sede Nacional: Calle 14 Sur No. 14 - 23PBX:(+57) 1 344 3700 Bogotá D.C. Colombia.<br/></left>
    Línea Nacional gratuita desde Colombia 018000115223<br/></left>
    Correo electrónico: atencionalusuario@unad.edu.co<br/></left>
    <center><a href="https://www.cerotec.net/estadisticas-99524/ingjuanma82.github.io" title="contador visitas"><img src="https://www.cerotec.net/contador.php?t=24&s=2&i=99524" alt="Contador de visitas y estadísticas"></a> <br><a href='https://www.cerotec.net' style='font-size:12px;' <br/></center>
+   
    </footer>
+
+</body>
+</html>
