--- a/lecturas_2.html
+++ b/lecturas_2.html
@@ -29,11 +29,13 @@
 <div id="main-wrapper">
 <div id="main"><a name="main"></a>
 <div id="nodeDecoration"><h1 id="nodeTitle"></h1></div>
-<div align="center"><iframe width="800" height="600" src="http://46.101.4.154/Art%C3%ADculos%20t%C3%A9cnicos/Seguridad%20Inform%C3%A1tica/Modelos%20de%20Seguridad%20Permisivos%20en%20la%20prevenci%C3%B3n%20de%20vulnerabilidades.pdf" frameborder="0" widhth="1200"></iframe></div>
+<div align="center"><iframe width="800" height="600" src="pdf/doc2.pdf" frameborder="0" widhth="1200"></iframe></div>
 </div>
 
    <footer>
-   <img src="img/Logo_unad pie.jpg"<br/>
+   <img src="img/Logo_unad pie.jpg">
+   
+   <br/>
 
 
    Sede Nacional: Calle 14 Sur No. 14 - 23PBX:(+57) 1 344 3700 Bogotá D.C. Colombia.<br/></left>   
