--- a/multimedia.html
+++ b/multimedia.html
@@ -38,11 +38,15 @@ Recuperado de https://www.youtube.com/watch?v=tatLjcmeaJk</h3>
 </section>
 
 <footer>
-  <img src="img/Logo_unad pie.jpg"<br/>
+  <img src="img/Logo_unad pie.jpg">
 
-
-  Sede Nacional: Calle 14 Sur No. 14 - 23PBX:(+57) 1 344 3700 Bogotá D.C. Colombia.<br/></left> 
+  <br/>
+  Sede Nacional: Calle 14 Sur No. 14 - 23PBX:(+57) 1 344 3700 Bogotá D.C. Colombia.<br/></left>
   Línea Nacional gratuita desde Colombia 018000115223<br/></left>
   Correo electrónico: atencionalusuario@unad.edu.co<br/></left>
   <center><a href="https://www.cerotec.net/estadisticas-99524/ingjuanma82.github.io" title="contador visitas"><img src="https://www.cerotec.net/contador.php?t=24&s=2&i=99524" alt="Contador de visitas y estadísticas"></a> <br><a href='https://www.cerotec.net' style='font-size:12px;' <br/></center>
+  
   </footer>
+
+</body>
+</html>
