--- a/Actividades.html
+++ b/Actividades.html
@@ -5,13 +5,16 @@
 	<meta description="Sitio web HTML5"/>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-
+	<title>Desarrollo de la Actividad</title>
+</head>
+<body>
 <header>		
-		<img src="img/LogoUNAD.png" width="315" height="66,5">
+		<img src="https://www.unad.edu.co/templates/unadgeneral/images/logoUNAD.png" width="315" height="66,5">
 	<h1>Fase de Construcción e Implantación HTML5</h1>
 	<h1>Actividades</h1><br/>
 	
-	</header>
+</header>
+
 <nav>
 		<ul>
 		<li><a href="lecturas.html" class="daddy">Lectura</a>
@@ -37,8 +40,7 @@
 	Línea Nacional gratuita desde Colombia 018000115223<br/></left>
 	Correo electrónico: atencionalusuario@unad.edu.co<br/></left>
 	<center><a href="https://www.cerotec.net/estadisticas-99524/ingjuanma82.github.io" title="contador visitas"><img src="https://www.cerotec.net/contador.php?t=24&s=2&i=99524" alt="Contador de visitas y estadísticas"></a> <br><a href='https://www.cerotec.net' style='font-size:12px;' <br/></center>
-	
-	</footer>
+</footer>
 
 </body>
 </html>
